--- a/static/style.css
+++ b/static/style.css
@@ -1,41 +1,30 @@
 body {
-	font-family: 'Open Sans';
-	background: #121212;
-	text-align: center;
-	overflow: hidden;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-image: url(1.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-color: #0c0c0c;
+	color: #ffffff;
+	font-family: 'Roboto Mono', monospace;
+}
+
+.description {
+	font-size: 1rem;
+	margin-bottom: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 600px;
+	line-height: 1.5;
 }
 
 h1 {
 	color: #00ffffc7;
-}
-
-div#pageContainer {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	background: url(1.png);
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-div#uploadContainer {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 75%;
-	height: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	padding: 50px;
-	max-width: 800px;
-	margin: auto;
-	background: rgba(16, 23, 32, 0.57);
-	border-radius: 16px;
-	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-	backdrop-filter: blur(7.5px);
-	-webkit-backdrop-filter: blur(7.5px);
-	border: 1px solid rgba(16, 23, 32, 0.3);
+	margin-bottom: 20px;
 }
 
 div#response a {
@@ -44,6 +33,7 @@ div#response a {
 	border-radius: 5px;
 	background: #101720b8;
 	text-decoration: none;
+	animation: slideDown 0.5s forwards;
 }
 
 .dropzone .dz-preview .dz-image {
@@ -66,10 +56,9 @@ div#response a {
 
 .dropzone .dz-message .dz-button {
 	font-size: 20pt;
-	color: #b5bbbb;
+	color: #d5d5d5;
 	padding: 10px;
 	border-radius: 5px;
-	background: #101720b8;
 	text-decoration: none;
 }
 
@@ -82,4 +71,32 @@ div#response a {
 	margin: 10px;
 	border-radius: 5px;
 	background: #101720b8;
+}
+
+@keyframes slideDown {
+	from {
+		opacity: 0;
+		transform: translateY(-20px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+#uploadContainer {
+	text-align: center;
+	padding: 35px;
+	background: #121212f2;
+	backdrop-filter: blur(5px);
+	opacity: 0;
+	border: 1px solid #919191;
+	animation: fadeIn 1000ms forwards;
+}
+
+@keyframes fadeIn {
+	to {
+		opacity: 1;
+	}
 }
